--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.vcproj
+.idea/
 # Ignore CLion CMake debug build folder at repo root and any nested instances
 cmake-build-debug/
 **/cmake-build-debug/
